log/build_2025-04-11_12-31-36/pid_control_node/stdout_stderr.log
running egg_info
writing ../../build/pid_control_node/pid_control_node.egg-info/PKG-INFO
writing dependency_links to ../../build/pid_control_node/pid_control_node.egg-info/dependency_links.txt
writing entry points to ../../build/pid_control_node/pid_control_node.egg-info/entry_points.txt
writing requirements to ../../build/pid_control_node/pid_control_node.egg-info/requires.txt
writing top-level names to ../../build/pid_control_node/pid_control_node.egg-info/top_level.txt
reading manifest file '../../build/pid_control_node/pid_control_node.egg-info/SOURCES.txt'
writing manifest file '../../build/pid_control_node/pid_control_node.egg-info/SOURCES.txt'
running build
running build_py
copying pid_control_node/pid_control.py -> /home/batch9/ros2_ws/build/pid_control_node/build/lib/pid_control_node
running install
running install_lib
copying /home/batch9/ros2_ws/build/pid_control_node/build/lib/pid_control_node/pid_control.py -> /home/batch9/ros2_ws/install/pid_control_node/lib/python3.12/site-packages/pid_control_node
byte-compiling /home/batch9/ros2_ws/install/pid_control_node/lib/python3.12/site-packages/pid_control_node/pid_control.py to pid_control.cpython-312.pyc
  File "/home/batch9/ros2_ws/install/pid_control_node/lib/python3.12/site-packages/pid_control_node/pid_control.py", line 102
    self.pos[2]=
                ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/batch9/ros2_ws/install/pid_control_node/lib/python3.12/site-packages/pid_control_node-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/pid_control_node/pid_control_node.egg-info to /home/batch9/ros2_ws/install/pid_control_node/lib/python3.12/site-packages/pid_control_node-0.0.0-py3.12.egg-info
running install_scripts
Installing pid_control script to /home/batch9/ros2_ws/install/pid_control_node/lib/pid_control_node
writing list of installed files to '/home/batch9/ros2_ws/build/pid_control_node/install.log'
